# player-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  rustfmt.toml
src/: app.rs  main.rs  utils.rs
ui/: app.slint  components.slint  state.slint
