[package]
name = "kokoro"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
walkdir = "2.5.0"
slint = "1.16.1"
rodio = "0.22.2"
anyhow = "1.0.102"
once_cell = "1.21.4"
image = "0.25.10"
lofty = "0.24.0"

[build-dependencies]
slint-build = "1.16.1"
